--- a/src/style/toast.sass
+++ b/src/style/toast.sass
@@ -47,8 +47,6 @@ $toast-min-width: 200px
     align-items: flex-end
 
 .toast
-  background: white
-  color: black
   padding: 0.75rem 1rem
   border-radius: $toast-radius
   box-shadow: $toast-shadow
@@ -60,16 +58,40 @@ $toast-min-width: 200px
   min-width: $toast-min-width
 
   &.success
-    background: #4caf50
-    color: white
+    &.light
+      background: #d1fae5
+      color: #065f46
+
+    &.dark
+      background: #064e3b
+      color: white
 
   &.error
-    background: #f44336
-    color: white
+    &.light
+      background: #fee2e2
+      color: #991b1b
+
+    &.dark
+      background: #7f1d1d
+      color: white
 
   &.warning
-    background: #ff9800
-    color: white
+    &.light
+      background: #fef3c7
+      color: #92400e
+
+    &.dark
+      background: #78350f
+      color: white
+
+  &.default
+    &.light
+      background: white
+      color: black
+
+    &.dark
+      background: #2d2d2d
+      color: white
 
   .toast-close
     background: transparent
@@ -77,7 +99,7 @@ $toast-min-width: 200px
     color: inherit
     font-weight: bold
     cursor: pointer
-    
+
 @keyframes fadeIn
   from
     opacity: 0
@@ -85,5 +107,3 @@ $toast-min-width: 200px
   to
     opacity: 1
     transform: translateY(0)
-
-
