moved variables to separate sass

--- a/src/style/toast.sass
+++ b/src/style/toast.sass
@@ -1,9 +1,4 @@
-$toast-z-index: 9999
-$toast-padding: 1rem
-$toast-gap: 0.5rem
-$toast-radius: 8px
-$toast-shadow: 0 4px 8px rgba(0, 0, 0, 0.2)
-$toast-min-width: 200px
+@use "variables.sass" as *
 
 .toast-container
   position: fixed
